# XBot

./: .gitignore  CLAUDE.md  README.md  analyze_data.py  install.sh  pyproject.toml  quicksort.py
astrbot/core/provider/sources/: gemini_embedding_source.py  openai_embedding_source.py
data/: process_data_1.md  process_data_10.md  process_data_11.md  process_data_12.md  process_data_13.md  process_data_14.md  process_data_15.md  process_data_16.md  process_data_17.md  process_data_18.md  process_data_19.md  process_data_2.md  process_data_20.md  process_data_21.md  process_data_22.md  process_data_23.md  process_data_24.md  process_data_25.md  process_data_26.md  process_data_27.md  process_data_28.md  process_data_29.md  process_data_3.md  process_data_30.md  process_data_31.md  process_data_32.md  process_data_33.md  process_data_34.md  process_data_35.md  process_data_36.md  process_data_37.md  process_data_38.md  process_data_39.md  process_data_4.md  process_data_40.md  process_data_41.md  process_data_42.md  process_data_43.md  process_data_44.md  process_data_45.md  (+9 more)
docs/: AstrBot分析.md  AstrBot简介.md  README.md  三天执行计划.md  三天精力分配.md  任务安排.md  关键要素与技术难点.md  开源项目参考.md  技术选型.md  竞赛策略.md  竞赛策略与技术要点.md  策略分析.md  精力分配.md  项目方法.md
processed_customer_service_data/: improved_processed_data.md  process_data_7.md  processed_data.md
scripts/: split_json.py
tools/: README_convert_qa.md  convert_customer_qa_to_kb.py  improved_data_processor.py  process_customer_service_data.py  split_json.py
